# libredfish

./: .travis.yml  Cargo.toml  README.md
src/: common.rs  lib.rs  manager.rs  one_or_many.rs  power.rs  schema.rs  storage.rs  thermal.rs
tests/: array-controller.json  array-controllers.json  chassis-thermal.json  disk-drive.json  disk-drives.json  logical-drives.json  manager.json  power.json  storage-enclosure.json  storage-enclosures.json
